поправил шрифты, добавил пагинацию

--- a/src/ui.html
+++ b/src/ui.html
@@ -8,35 +8,7 @@
     <title>Document</title>
 
     <style>
-        .ui {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 40px;
-        }
 
-        .form-group {
-            margin-bottom: 24px;
-            border-bottom: 1px dashed #ddd;
-            padding: 20px 0;
-        }
-
-        .row {
-           margin-bottom: 15px;
-        }
-
-        .form-group__row {
-            display: flex;
-            margin: 0 -15px;
-            width: auto;
-        }
-
-        .form-group__column {
-            padding: 0 15px
-        }
-
-        .form-group__column--2 {
-            width: 50%;
-        }
 
     </style>
 </head>
@@ -233,6 +205,17 @@
                     <input type="checkbox" name="check-one" value="check-one" />
                     <span>Кликни меня</span>
                 </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="pagination">
+                <a class="link pagination__link pagination__link-next" href="#">Следующая</a>
+                <div class="pagination__box">
+                    <a class="link pagination__link active" href="#">1</a>
+                    <a class="link pagination__link" href="#">2</a>
+                    <a class="link pagination__link" href="#">3</a>
+                    <a class="link pagination__link" href="#">4</a>
+                </div>
             </div>
         </div>
     </div>
