медиа + новые элементы uikit

--- a/src/ui.html
+++ b/src/ui.html
@@ -207,6 +207,7 @@
                 </label>
             </div>
         </div>
+        <h3>Пагинация</h3>
         <div class="form-group">
             <div class="pagination">
                 <a class="link pagination__link pagination__link-next" href="#">Следующая</a>
@@ -217,6 +218,22 @@
                     <a class="link pagination__link" href="#">4</a>
                 </div>
             </div>
+        </div>
+        <h3>Хлебные крошки</h3>
+        <div class="form-group">
+            <ul class="breadcrumbs">
+                <li class="breadcrumbs__item">
+                    <a href="#" class="breadcrumbs__link">Главная</a>
+                </li>
+                <li class="breadcrumbs__item">
+                    <span class="breadcrumbs__text">Тендеры</span>
+                </li>
+
+            </ul>
+        </div>
+        <h3>Кнопка назад</h3>
+        <div class="form-group">
+            <a href="/" class="move-back">Каталог</a>
         </div>
     </div>
 </div>
