страницы объявления, тендеры, цены поставщиков

--- a/src/ceni-postavshikov.html
+++ b/src/ceni-postavshikov.html
@@ -10,15 +10,183 @@
 
 <body>
 <div class="header">
-    <div class="container-fluid">
-        
-    </div>
-</div>
-<div class="content">
 
 </div>
+<div class="content ceni">
+    <ul class="breadcrumbs container-fluid">
+        <li class="breadcrumbs__item">
+            <a href="#" class="breadcrumbs__link">Цены поставщиков</a>
+        </li>
+        <li class="breadcrumbs__item">
+            <span class="breadcrumbs__text">Бетон гранит</span>
+        </li>
+    </ul>
+    <div class="ceni__products">
+        <div class="ceni__product-inner">
+            <div class="ceni__slider-images slider-ceni js-slider-ceni">
+                <div class="container-fluid">
+                    <div class="slider-wrapper">
+                        <div class="slider-ceni__slide">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                        <div class="slider-ceni__slide">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                        <div class="slider-ceni__slide">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="ceni__slider-description container-fluid">
+                <h5 class="mb-2">Бетон гранит М-150 П2</h5>
+                <h3 class="mb-3">4 000 руб</h3>
+                <h6 class="mb-2">Характеристики</h6>
+                <p class="sm mb-12"><span class="grey">Размер:</span> M - 150</p>
+                <p class="sm mb-12"><span class="grey">Сорт:</span> F100 W4</p>
+                <p class="sm mb-3"><span class="grey">Примечение:</span> B - 10/12,5</p>
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <h6 class="mb-2">Описание</h6>
+            <p class="sm mb-3">
+                Тяжёлые бетоны обладают большей удельной прочностью на сжатие в сравнении с лёгкими, из-за чего получили
+                распространение в капитальном строительстве. Высокая плотность тяжёлого бетона обусловлена как
+                используемым наполнителем, так и значительным механическим уплотнением. К плюсам тяжёлых бетонов можно
+                отнести долговечность, высокую прочность, твёрдость и морозостойкость; к минусам — значительную
+                стоимость производства и высокую теплопроводность.
+            </p>
+            <p class="sm pb-2 border-bottom"><strong>Поставщик:</strong></p>
+            <p class="sm pb-2 pt-2 blue border-bottom"><strong>
+                <span>StroitelCompany.ru</span>
+                <span>
+                    <img src="img/icons/star.svg" alt="">
+                    <img src="img/icons/star.svg" alt="">
+                    <img src="img/icons/star-empty.svg" alt="">
+                </span>
+            </strong></p>
+            <p class="sm pb-2 pt-2 border-bottom">Москва</p>
+            <p class="sm pb-2 mb-3 pt-2 blue border-bottom">
+                <a href="">+ 7 Показать номер</a>
+            </p>
+            <p class="sm grey mb-32">
+                Опубликовано:
+                <strong>26.05.2021 </strong>в <strong>17:10</strong>
+            </p>
+            <h4 class="mb-3">Похожие товары</h4>
+        </div>
+        <div class="slider-products js-slider-products border-bottom">
+            <div class="container-fluid">
+                <div class="slider-wrapper">
+                    <div class="slider-products__slide">
+                        <div class="slider-products__image">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                        <div class="slider-products__content">
+                            <p class="sm mb-2">
+                                Бетон гранит М-150 П2 F50 W2 W2 П2 F50
+                            </p>
+                            <h6 class="mb-12">4 000 руб.</h6>
+                            <a href="" class="sm link"><strong>StroitelCompany.ru</strong></a>
+                        </div>
+                    </div>
+                    <div class="slider-products__slide">
+                        <div class="slider-products__image">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                        <div class="slider-products__content">
+                            <p class="sm mb-2">
+                                Бетон гранит М-150 П2 F50 W2 W2 П2 F50
+                            </p>
+                            <h6 class="mb-12">4 000 руб.</h6>
+                            <a href="" class="sm link"><strong>StroitelCompany.ru</strong></a>
+                        </div>
+                    </div>
+                    <div class="slider-products__slide">
+                        <div class="slider-products__image">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                        <div class="slider-products__content">
+                            <p class="sm mb-2">
+                                Бетон гранит М-150 П2 F50 W2 W2 П2 F50
+                            </p>
+                            <h6 class="mb-12">4 000 руб.</h6>
+                            <a href="" class="sm link"><strong>StroitelCompany.ru</strong></a>
+                        </div>
+                    </div>
+                    <div class="slider-products__slide">
+                        <div class="slider-products__image">
+                            <img src="img/mock.png" alt="баннер">
+                        </div>
+                        <div class="slider-products__content">
+                            <p class="sm mb-2">
+                                Бетон гранит М-150 П2 F50 W2 W2 П2 F50
+                            </p>
+                            <h6 class="mb-12">4 000 руб.</h6>
+                            <a href="" class="sm link"><strong>StroitelCompany.ru</strong></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="pt-2 pb-2 border-bottom container-fluid">
+            <a href="" class="btn btn-primary block">В коррзину</a>
+        </div>
+    </div>
+
+    <menu class="menu">
+        <ul class="menu__list">
+            <li class="menu__item">
+                <a href="" class="menu__link active">
+                    <img src="img/icons/menu-main.svg" alt="" class="menu__icon">
+                    <img src="img/icons/menu-main-active.svg" alt="" class="menu__icon menu__icon--active">
+                    <p class="menu__name">
+                        Главная
+                    </p>
+                </a>
+            </li>
+            <li class="menu__item">
+                <a href="" class="menu__link">
+                    <img src="img/icons/menu-catalog.svg" alt="" class="menu__icon">
+                    <img src="img/icons/menu-catalog-active.svg" alt="" class="menu__icon menu__icon--active">
+                    <p class="menu__name">
+                        Каталог
+                    </p>
+                </a>
+            </li>
+            <li class="menu__item">
+                <a href="" class="menu__link">
+                    <img src="img/icons/menu-location.svg" alt="" class="menu__icon">
+                    <img src="img/icons/menu-location-active.svg" alt="" class="menu__icon menu__icon--active">
+                    <p class="menu__name">
+                        Москва
+                    </p>
+                </a>
+            </li>
+            <li class="menu__item">
+                <a href="" class="menu__link">
+                    <img src="img/icons/menu-basket.svg" alt="" class="menu__icon">
+                    <img src="img/icons/menu-basket-active.svg" alt="" class="menu__icon menu__icon--active">
+                    <p class="menu__name">
+                        Корзина
+                    </p>
+                </a>
+            </li>
+            <li class="menu__item">
+                <a href="" class="menu__link">
+                    <img src="img/icons/menu-profile.svg" alt="" class="menu__icon">
+                    <img src="img/icons/menu-profile-active.svg" alt="" class="menu__icon menu__icon--active">
+                    <p class="menu__name">
+                        Профиль
+                    </p>
+                </a>
+            </li>
+        </ul>
+    </menu>
+</div>
 <div class="footer">
-    
+
 </div>
 
 </body>
