--- a/src/tenders.html
+++ b/src/tenders.html
@@ -22,99 +22,129 @@
                 <span class="text sm grey">340 товаров</span>
             </h2>
         </div>
-        <div class="announcement-card">
-            <div class="container-fluid">
-                <div class="announcement-card__head mb-2">
-                    <div class="announcement-card__image">
-                        <img src="img/mock.png" alt="">
-                    </div>
-                    <div class="announcement-card__info">
-                        <p class="xs grey mb-2">Бетон гранит</p>
-                        <p class="sm mb-1">Трубы лежалые 1720х20 и 1820х18</p>
-                        <div class="status orange">Продам</div>
-                    </div>
+
+        <div class="tender-card">
+            <div class="tender-card__head dark container-fluid">
+                <div class="tender-card__row mb-2">
+                    <span class="text sm">Тендер №279</span>
+                    <span class="status sm green-light">Открытый конкурс</span>
                 </div>
-                <p class="sm mb-1">
-                    Каркас здания АБК12.4х40х11м трех этажное административно бытовое здание Каркас здания АБК
-                    12.4х40х11
-                    трех этажное административно...
+                <p class="grey xs">
+                    Период торгов: с <strong>10:40 30 октября 2019 г.</strong> по <strong>17:00 8 ноября 2019 г.</strong>
                 </p>
-                <p class="sm grey mb-1">Москва</p>
-                <p class="sm mb-3">Александр Иванов</p>
-                <a href="" class="btn btn-secondary block sm mb-3">Показать телефон</a>
-                <p class="xs grey">Размещена: <strong>26.05.2021</strong> в <strong>17:10</strong></p>
+            </div>
+            <div class="tender-card__section container-fluid">
+                <p class="xs blue"><strong>На поставку трубопроводов стальных в ППУ изоляции и комплектующих более 2000 мп</strong></p>
+            </div>
+            <div class="tender-card__section container-fluid">
+                <span class="text xs grey mb-1">Состав лота:</span>
+                <p class="xs">Вентиль, Заглушка, Задвижка, Муфта, Отвод, Переход, Тройник, Фланец, Затвор</p>
+            </div>
+            <div class="tender-card__section container-fluid">
+                <div class="tender-card__row mb-2">
+                    <span class="text sm"><strong>Сумма контракта</strong></span>
+                    <span class="text sm"><strong>не указана</strong></span>
+                </div>
+                <div class="tender-card__row">
+                    <span class="text sm"><strong>Статус</strong></span>
+                    <span class="text green sm"><strong>Идут торги</strong></span>
+                </div>
+            </div>
+            <div class="tender-card__footer container-fluid">
+                <a href="" class="btn btn-secondary block sm">Перейти к тендеру</a>
             </div>
         </div>
-
-        <div class="announcement-card">
-            <div class="container-fluid">
-                <div class="announcement-card__head mb-2">
-                    <div class="announcement-card__image">
-                        <img src="img/mock.png" alt="">
-                    </div>
-                    <div class="announcement-card__info">
-                        <p class="xs grey mb-2">Бетон гранит</p>
-                        <p class="sm mb-1">Трубы лежалые 1720х20 и 1820х18</p>
-                        <div class="status red">Куплю</div>
-                    </div>
+        <div class="tender-card">
+            <div class="tender-card__head dark container-fluid">
+                <div class="tender-card__row mb-2">
+                    <span class="text sm">Тендер №279</span>
+                    <span class="status sm violet">Запрос котировок</span>
                 </div>
-                <p class="sm mb-1">
-                    Каркас здания АБК12.4х40х11м трех этажное административно бытовое здание Каркас здания АБК
-                    12.4х40х11
-                    трех этажное административно...
+                <p class="grey xs">
+                    Период торгов: с <strong>10:40 30 октября 2019 г.</strong> по <strong>17:00 8 ноября 2019 г.</strong>
                 </p>
-                <p class="sm grey mb-1">Москва</p>
-                <p class="sm mb-3">Александр Иванов</p>
-                <a href="" class="btn btn-secondary block sm mb-3">Показать телефон</a>
-                <p class="xs grey">Размещена: <strong>26.05.2021</strong> в <strong>17:10</strong></p>
+            </div>
+            <div class="tender-card__section container-fluid">
+                <p class="xs blue"><strong>На поставку трубопроводов стальных в ППУ изоляции и комплектующих более 2000 мп</strong></p>
+            </div>
+            <div class="tender-card__section container-fluid">
+                <span class="text xs grey mb-1">Состав лота:</span>
+                <p class="xs">Вентиль, Заглушка, Задвижка, Муфта, Отвод, Переход, Тройник, Фланец, Затвор</p>
+            </div>
+            <div class="tender-card__section container-fluid">
+                <div class="tender-card__row mb-2">
+                    <span class="text sm"><strong>Сумма контракта</strong></span>
+                    <span class="text sm"><strong>не указана</strong></span>
+                </div>
+                <div class="tender-card__row">
+                    <span class="text sm"><strong>Статус</strong></span>
+                    <span class="text green sm"><strong>Идут торги</strong></span>
+                </div>
+            </div>
+            <div class="tender-card__footer container-fluid">
+                <a href="" class="btn btn-secondary block sm">Перейти к тендеру</a>
             </div>
         </div>
-
-        <div class="announcement-card">
-            <div class="container-fluid">
-                <div class="announcement-card__head mb-2">
-                    <div class="announcement-card__image">
-                        <img src="img/mock.png" alt="">
-                    </div>
-                    <div class="announcement-card__info">
-                        <p class="xs grey mb-2">Бетон гранит</p>
-                        <p class="sm mb-1">Трубы лежалые 1720х20 и 1820х18</p>
-                        <div class="status blue">Спрос услуг</div>
-                    </div>
+        <div class="tender-card">
+            <div class="tender-card__head dark container-fluid">
+                <div class="tender-card__row mb-2">
+                    <span class="text sm">Тендер №279</span>
+                    <span class="status sm green-light">Открытый конкурс</span>
                 </div>
-                <p class="sm mb-1">
-                    Каркас здания АБК12.4х40х11м трех этажное административно бытовое здание Каркас здания АБК
-                    12.4х40х11
-                    трех этажное административно...
+                <p class="grey xs">
+                    Период торгов: с <strong>10:40 30 октября 2019 г.</strong> по <strong>17:00 8 ноября 2019 г.</strong>
                 </p>
-                <p class="sm grey mb-1">Москва</p>
-                <p class="sm mb-3">Александр Иванов</p>
-                <a href="" class="btn btn-secondary block sm mb-3">Показать телефон</a>
-                <p class="xs grey">Размещена: <strong>26.05.2021</strong> в <strong>17:10</strong></p>
+            </div>
+            <div class="tender-card__section container-fluid">
+                <p class="xs blue"><strong>На поставку трубопроводов стальных в ППУ изоляции и комплектующих более 2000 мп</strong></p>
+            </div>
+            <div class="tender-card__section container-fluid">
+                <span class="text xs grey mb-1">Состав лота:</span>
+                <p class="xs">Вентиль, Заглушка, Задвижка, Муфта, Отвод, Переход, Тройник, Фланец, Затвор</p>
+            </div>
+            <div class="tender-card__section container-fluid">
+                <div class="tender-card__row mb-2">
+                    <span class="text sm"><strong>Сумма контракта</strong></span>
+                    <span class="text sm"><strong>не указана</strong></span>
+                </div>
+                <div class="tender-card__row">
+                    <span class="text sm"><strong>Статус</strong></span>
+                    <span class="text green sm"><strong>Идут торги</strong></span>
+                </div>
+            </div>
+            <div class="tender-card__footer container-fluid">
+                <a href="" class="btn btn-secondary block sm">Перейти к тендеру</a>
             </div>
         </div>
-
-        <div class="announcement-card">
-            <div class="container-fluid">
-                <div class="announcement-card__head mb-2">
-                    <div class="announcement-card__image">
-                        <img src="img/mock.png" alt="">
-                    </div>
-                    <div class="announcement-card__info">
-                        <p class="xs grey mb-2">Бетон гранит</p>
-                        <p class="sm mb-1">Трубы лежалые 1720х20 и 1820х18</p>
-                        <div class="status green">Предложение услуги</div>
-                    </div>
+        <div class="tender-card">
+            <div class="tender-card__head dark container-fluid">
+                <div class="tender-card__row mb-2">
+                    <span class="text sm">Тендер №279</span>
+                    <span class="status sm green-light">Открытый конкурс</span>
                 </div>
-                <p class="sm mb-1">
-                    Каркас здания АБК12.4х40х11м трех этажное административно бытовое здание Каркас здания АБК
-                    12.4х40х11
-                    трех этажное административно...
+                <p class="grey xs">
+                    Период торгов: с <strong>10:40 30 октября 2019 г.</strong> по <strong>17:00 8 ноября 2019 г.</strong>
                 </p>
-                <p class="sm grey mb-1">Москва</p>
-                <p class="sm mb-3">Александр Иванов</p>
-                <a href="" class="btn btn-secondary block sm mb-3">Показать телефон</a>
-                <p class="xs grey">Размещена: <strong>26.05.2021</strong> в <strong>17:10</strong></p>
+            </div>
+            <div class="tender-card__section container-fluid">
+                <p class="xs blue"><strong>На поставку трубопроводов стальных в ППУ изоляции и комплектующих более 2000 мп</strong></p>
+            </div>
+            <div class="tender-card__section container-fluid">
+                <span class="text xs grey mb-1">Состав лота:</span>
+                <p class="xs">Вентиль, Заглушка, Задвижка, Муфта, Отвод, Переход, Тройник, Фланец, Затвор</p>
+            </div>
+            <div class="tender-card__section container-fluid">
+                <div class="tender-card__row mb-2">
+                    <span class="text sm"><strong>Сумма контракта</strong></span>
+                    <span class="text sm"><strong>не указана</strong></span>
+                </div>
+                <div class="tender-card__row">
+                    <span class="text sm"><strong>Статус</strong></span>
+                    <span class="text grey sm"><strong>Торги завершены</strong></span>
+                </div>
+            </div>
+            <div class="tender-card__footer container-fluid">
+                <a href="" class="btn btn-secondary block sm">Перейти к тендеру</a>
             </div>
         </div>
 
